# espn-api

./: .gitignore  .replit  cloud_function.py  fantasy_data_extractor.py  pyproject.toml  service_account.json
.github/workflows/: update_fantasy_data.yml
